refactor(BoardUpdateService): 복잡한 로직 메소드 추출 및 board update API에서 해시태그 수정 로직 보충